# workshop_ensimag

./: CONTRIBUTING.md  Dashboard Jordan Josserand.json  correction.md  dashboard.json  dashboard_michelin_car_simulator.json  readme.md
ansible_workshop/: README.md  ansible.cfg
ansible_workshop/collections/: requirements.txt
ansible_workshop/data/wal/: 00000000
ansible_workshop/inventories/prod/: hosts.yml
ansible_workshop/inventories/prod/group_vars/: all.yml  observability.yml
ansible_workshop/playbooks/: install_observability.yml
ansible_workshop/roles/grafana/files/: start_grafana.sh
ansible_workshop/roles/grafana/tasks/: grafana_repository.yml  main.yml
ansible_workshop/roles/grafana/templates/: datasources.yml.j2  grafana.ini.j2
ansible_workshop/roles/grafana_datasources/defaults/: main.yml
ansible_workshop/roles/grafana_datasources/handlers/: main.yml
back-end-car/: .gitignore  backend_car.py  config.ini  config_example.ini  readme.md  requirements.txt
backend-pilot/: .gitignore  README.md  app.py  config.ini  config.py  kafka_service.py  pyproject.toml
backend-pilot/static/: app.js  style.css
backend-pilot/templates/: index.html
front-end-car/: ensimag-workshop-car-race.drawio  instrumentation.js  package-lock.json  package.json  readme.md  server.js
front-end-car/public/: index.html  script.js  style.css
workshop_image/: .gitignore  Dockerfile  README.md  build_michelin.sh
workshop_image/.devcontainer/: devcontainer.json
workshop_image/install_scripts/: post_michelin_build.sh  pre_michelin_build.sh
(+19 files in other folders)
